--- a/WebApiGeekBrains/MetricApi/MetricsAgentTests/MetricsAgentTests.csproj
+++ b/WebApiGeekBrains/MetricApi/MetricsAgentTests/MetricsAgentTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -17,6 +17,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MetricsAgent\MetricsAgent.csproj" />
+    <ProjectReference Include="..\MetricsManager\MetricsManager.csproj" />
   </ItemGroup>
 
 </Project>
