--- a/WebApiGeekBrains/MetricApi/MetricsManager/appsettings.json
+++ b/WebApiGeekBrains/MetricApi/MetricsManager/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "LocalDB": "Data Source=metrics.db;Version=3;Pooling=true;Max Pool Size=100"
+  },
   "AllowedHosts": "*"
 }
