--- a/WebApiGeekBrains/MetricApi/MetricsManager/MetricsManager.csproj
+++ b/WebApiGeekBrains/MetricApi/MetricsManager/MetricsManager.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Core\Core.csproj" />
+    <ProjectReference Include="..\..\..\NsSwagLib\NsSwagLib.csproj" />
   </ItemGroup>
 
 </Project>
